# agentReconstruct

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.env.example  config.secret.env.example  config.shared.env  env_loader.py  patent_fastqa_graph_comparison_report.md  patent_graph_fastqa_adaptation_plan.md  patent_graph_live_schema_report.md  patent_graph_structure.md  upload.py  user_import_template.csv  知识图谱专题.md  部门分级.xlsx
fastQA/: .gitignore  README.md  pyproject.toml
fastQA/app/: README.md  __init__.py  main.py
fastQA/benchmark/: eval_lfp_bench.py  generate_lfp_bench_draft.py
fastQA/docs/: 01-system-overview.md  02-gateway-task-relay.md  03-rag-planner-retriever-llm.md  04-graph-kb-and-neo4j-gap.md  05-pdf-and-tabular-pipelines.md  06-issues-and-gaps.md  10-lfp-qa-mode-user-manual.md  README.md  design_graph_kb_upgrade.md  graph_kb_classic_pipeline_retirement.md  graph_kb_legacy_capability_inventory.md  graph_kb_upgrade_implementation_plan.md  graph_kb_upgrade_spec.md  legacy_kg_qa_routing.md  rerank-local-migration-plan.md  stage2_dashscope_hot_connection_implementation_plan.md  stage2_dashscope_hot_connection_spec.md
fastQA/scripts/: start_gunicorn.sh  status_gunicorn.sh  stop_gunicorn.sh
fastQA/tests/: conftest.py  test_chat_persistence.py  test_comparison_intent.py  test_comparison_validation.py  test_context_loading.py  test_conversation_authority_client.py  test_conversation_context_builder.py  test_documents.py  test_documents_reference_preview.py  test_documents_router.py  test_documents_storage.py  test_documents_view_pdf.py  test_doi_inserter.py  test_doi_validation.py  test_embedding_client.py  test_env_loader.py  test_fallback_error_contract.py  test_fastqa_kb_graph_integration.py  test_file_context_service.py  test_file_route_service.py  test_file_routes_materialization.py  test_file_routes_tabular_kb.py  (+79 more)
gateway/: .gitignore  AGENTS.md  README.md  gunicorn.conf.py  pyproject.toml
patent/: README.md  config.py  config.shared.env.example  pyproject.toml
(+1457 files in other folders)
