[project]
name = "fastqa-service"
version = "0.1.0"
description = "FastQA skeleton behind gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "langchain-core>=0.3,<1.0",
  "langchain-openai>=0.2,<1.0",
  "openai>=1.40,<2.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.0,<3.0",
  "pymupdf>=1.24,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=5.0,<6.0",
  "openai>=1.0,<2.0",
  "pandas>=2.0,<3.0",
  "openpyxl>=3.1,<4.0",
  "PyMuPDF>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
